syntax = "proto2";
package protobuf.response;
 
option java_package = "com.txtech.services.protobuf.response";
option java_outer_classname = "ConnectionProtoResp";
 
message ConnectionResp {
	  optional string protoversion=1;
	  optional string message=2;
}


